feat(ui): add ui!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src src/main.ts",
+    "dev": "nodemon --watch src --watch views --watch public src/main.ts",
     "build": "rimraf dist && tsc",
     "start": "node dist/main.js"
   },
